--- a/homework/styles.css
+++ b/homework/styles.css
@@ -128,3 +128,38 @@ body {
   background-color: #d6314a;
   cursor: pointer;
 }
+
+.star-rating {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.star-rating input[type="radio"] {
+  display: none;
+}
+
+.star-rating label {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+}
+
+.star-rating label img {
+  width: 100%;
+  height: 100%;
+  filter: invert(49%) sepia(53%) saturate(2495%) hue-rotate(36deg)
+    brightness(92%) contrast(102%);
+}
+
+.star-rating label:hover ~ label img:not(:hover),
+.star-rating input:checked ~ label img,
+.star-rating input:checked + label img {
+  filter: invert(83%) sepia(28%) saturate(483%) hue-rotate(184deg)
+    brightness(97%) contrast(104%);
+}
+.star-rating input:checked + label img {
+  filter: invert(49%) sepia(53%) saturate(2495%) hue-rotate(36deg)
+    brightness(92%) contrast(102%);
+}
