--- a/homework/src/app/page.module.css
+++ b/homework/src/app/page.module.css
@@ -4,4 +4,7 @@
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
+  background-color: #111827;
+  color: white;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
