--- a/homework/styles.css
+++ b/homework/styles.css
@@ -145,21 +145,18 @@ body {
   width: 30px;
   height: 30px;
 }
-
-.star-rating label img {
+.star img {
   width: 100%;
   height: 100%;
-  filter: invert(49%) sepia(53%) saturate(2495%) hue-rotate(36deg)
-    brightness(92%) contrast(102%);
-}
-
-.star-rating label:hover ~ label img:not(:hover),
-.star-rating input:checked ~ label img,
-.star-rating input:checked + label img {
   filter: invert(83%) sepia(28%) saturate(483%) hue-rotate(184deg)
     brightness(97%) contrast(104%);
+  transition: transform 0.2s;
 }
-.star-rating input:checked + label img {
+
+.star img:hover,
+.star img.hovered,
+.star img.selected {
+  transform: scale(1.2);
   filter: invert(49%) sepia(53%) saturate(2495%) hue-rotate(36deg)
     brightness(92%) contrast(102%);
 }
